# sdl2-cpp-project-template

./: CMakeLists.txt  LICENSE  README.md  credits
src/: ProgramObject.cc  ProgramObject.hh  TextObject.hh  TextRenderer.hh  config.hh  main.cc  pointers.hh
